changed the header css and added in the start of a footer

--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <title>Projects</title>
 </head>
 <body>
   <div class="header-footer">
     <header>
       <a href="/">
-        <img src="/images/logo.png" alt="logo"/>
+        <img src="../images/logo.png" alt="logo"/>
       </a>
       <h1>Troy Owens - Web Dev</h1>
       <nav>
-        <a href="/">
+        <a href="https://portfolio-na1rxoapp-troyowens0493s-projects.vercel.app">
           <button>Home</button>
         </a>
-        <a href="/about">
+        <a href="https://portfolio-na1rxoapp-troyowens0493s-projects.vercel.app/about">
           <button>About Me</button>
         </a>
         <a href="#">
@@ -30,10 +31,38 @@
       </nav>
     </header>
     <main>
-
+      <h3>Projects</h3>
+      <h4>Here are some of by beginner projects</h4>
+      <p>
+        One of my first web application projects was the game of Snake: I built the game using p5.js and then embedded it into a blank HTML file.
+      </p>
+      <div id="canvas-container">
+        <script src="snake.js"></script>
+      </div>
+      <p>
+        Once I finished the Snake game I was hooked on simple games and so I built pong: This pong game was built in the same way, p5.js, and then embedded into an HTML file.
+      </p>
+      <p>
+        As I got better at HTML and CSS, I built a website for a non-existent rafting company called white water rafting, the site can be found here:
+      </p>
+      <h4>Professional experience</h4>
+      <p>
+        In my current role, I've undertaken several impactful projects that have streamlined processes and enhanced efficiency. One notable project involved developing a Google Apps script at Paywut, which facilitated the rapid duplication of products imported from our Shopify store, significantly expediting auction preparations. Recognizing the effectiveness of this solution, my supervisor entrusted me with additional responsibilities, including the creation of another app script to streamline email management. This script efficiently identified and segmented new emails within our database, optimizing our marketing efforts. Furthermore, upon demonstrating continued success, I was tasked by senior management to rebuild the product duplication app script as a native Shopify application. The successful development and implementation of this app not only improved user experience but also garnered positive feedback from those who work with me. These experiences have honed my skills in scripting and application development while reinforcing my commitment to delivering innovative solutions.
+      </p>
     </main>
     <footer>
-
+      <div class="links">
+        <a href="/site-plan" style="color: #44AFF5;">Site Plan</a>
+        <a href="#" style="color: #44AFF5;">Contact Me</a>
+      </div>
+      <div class="social">
+        <a href="https://www.facebook.com/">
+          <i class="fa-brands fa-square-facebook fa-2xl" style="color: #44AFF5;"></i>
+        </a>
+        <a href="https://www.linkedin.com/">
+          <i class="fa-brands fa-linkedin fa-2xl" style="color: #44AFF5;"></i>
+        </a>
+      </div>
     </footer>
   </div>
 </body>
