--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
       <a href="/">
-        <img src="../images/logo.png" alt="logo"/>
+        <img src="./images/logo.png" alt="logo"/>
       </a>
       <h1>Troy Owens - Web Dev</h1>
       <nav>
@@ -48,7 +48,7 @@
       <p>
         Once I finished the Snake game I was hooked on simple games and so I built pong: This pong game was built in the same way, p5.js, and then embedded into an HTML file.
       </p>
-      <img class="pong-game" src="/images/pong.png" alt="Image of the pong game that I made">
+      <img class="pong-game" src="../images/pong.png" alt="Image of the pong game that I made">
       </div>
       <p>
         As I got better at HTML and CSS, I built a website for a non-existent rafting company called white water rafting, the site can be found here:
