updated links and images

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <header>
-      <a href="/">
-        <img src="/images/logo.png" alt="logo"/>
+      <a href="#">
+        <img src="images/logo.png" alt="logo"/>
       </a>
       <h1>Troy Owens - Web Dev</h1>
       <nav>
-        <a href="https://portfolio-na1rxoapp-troyowens0493s-projects.vercel.app">
+        <a href="https://portfolio-rho-eight-14.vercel.app">
           <button>Home</button>
         </a>
-        <a href="https://portfolio-na1rxoapp-troyowens0493s-projects.vercel.app/about">
+        <a href="https://portfolio-rho-eight-14.vercel.app/about">
           <button>About Me</button>
         </a>
         <a href="#">
@@ -48,7 +48,7 @@
       <p>
         Once I finished the Snake game I was hooked on simple games and so I built pong: This pong game was built in the same way, p5.js, and then embedded into an HTML file.
       </p>
-      <img class="pong-game" src="/images/pong.png" alt="Image of the pong game that I made">
+      <img class="pong-game" src="images/pong.png" alt="Image of the pong game that I made">
       </div>
       <p>
         As I got better at HTML and CSS, I built a website for a non-existent rafting company called white water rafting, the site can be found here:
