Made the style look much closer to the react paage

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="#">
         <img src="./images/logo.png" alt="logo"/>
       </a>
-      <h1>Troy Owens - Web Dev</h1>
+      <h1>Troy Owens <br> Web Dev</h1>
       <nav>
         <a href="https://portfolio-rho-eight-14.vercel.app">
           <button>Home</button>
@@ -60,15 +60,15 @@
     </main>
     <footer>
       <div class="links">
-        <a href="/site-plan" style="color: #44AFF5;">Site Plan</a>
-        <a href="#" style="color: #44AFF5;">Contact Me</a>
+        <a href="/site-plan" style="padding-left: 1.25rem; padding-right: 1.25rem;">Site Plan</a>
+        <a href="#"">Contact Me</a>
       </div>
       <div class="social">
         <a href="https://www.facebook.com/">
-          <i class="fa-brands fa-square-facebook fa-2xl" style="color: #44AFF5;"></i>
+          <i class="fa-brands fa-square-facebook fa-2xl"></i>
         </a>
         <a href="https://www.linkedin.com/">
-          <i class="fa-brands fa-linkedin fa-2xl" style="color: #44AFF5;"></i>
+          <i class="fa-brands fa-linkedin fa-2xl""></i>
         </a>
       </div>
     </footer>
