--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <i class="fa-brands fa-square-facebook fa-2xl"></i>
         </a>
         <a href="https://www.linkedin.com/">
-          <i class="fa-brands fa-linkedin fa-2xl""></i>
+          <i class="fa-brands fa-linkedin fa-2xl"></i>
         </a>
       </div>
     </footer>
