--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
       <a href="#">
-        <img src="./images/logo.png" alt="logo"/>
+        <img src="./images/logo.png" alt="logo">
       </a>
       <h1>Troy Owens <br> Web Dev</h1>
       <nav>
